WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116243
-webView:updateHistoryTitle:forURL: does not pass a frame to the delegate
https://bugs.webkit.org/show_bug.cgi?id=116243
Summary
-webView:updateHistoryTitle:forURL: does not pass a frame to the delegate
mitz
Reported
2013-05-16 13:40:49 PDT
-webView:updateHistoryTitle:forURL: does not pass a frame to the delegate
Attachments
Add inFrame: to the delegate method
(4.84 KB, patch)
2013-05-16 13:47 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2013-05-16 13:47:12 PDT
Created
attachment 201989
[details]
Add inFrame: to the delegate method
mitz
Comment 2
2013-05-16 13:49:55 PDT
Fixed in
r150205
. <
http://trac.webkit.org/r150205
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug